@@ -15,6 +15,11 @@
 
 -------------------------------------------------------------------------------
 
+	2006-11-18
+
+	* Fix prefixes for ip addresses and urls.  Restore colon that
+          was dropped from token.c in July 2006.
+
 	2006-11-04
 
 	* Fixed problem parsing message ids.
